Finalizadas funcionalidades fundamentales AgendaCliente, AgendaVisitas, BuscarArticulo, Facturas, Presupuestos y Reservas

--- a/PiscisOutOffice/app/src/main/res/values/strings.xml
+++ b/PiscisOutOffice/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="buscar">Buscar</string>
     <string name="articulos">Articulos</string>
     <string name="nombre_articulo">Nombre Articulo</string>
+    <string name="me_recibio">¿Me recibio?</string>
+    <string name="produjo_venta">¿Produjo venta?</string>
+    <string name="finalizar_visita">Finalizar visita</string>
 </resources>
